fixed pagination active class bug, origin and location small bugs and added the skeleton for error handling

--- a/src/components/Characters/CharacterCardList/CharacterCardList.scss
+++ b/src/components/Characters/CharacterCardList/CharacterCardList.scss
@@ -11,3 +11,11 @@
     justify-content: space-around;
   }
 }
+
+.error-message {
+  color: #202329;
+  text-align: center;
+  font-weight: bold;
+  margin-top: 10vh;
+  font-size: 5rem;
+}
